fix: cats functions